# codora

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  README.md  SECURITY.md  package.json  rustfmt.toml
.github/workflows/: docs.yml  static.yml  test-features.yaml
.metals/: metals.lock.db
auth-rs/: Cargo.toml
auth-rs/bearer/: Cargo.toml
auth-rs/jwt/: Cargo.toml
auth-rs/src/: claims.rs  lib.rs
auth-rs/src/authentication/: mod.rs
crates/___private/codora-core/: Cargo.toml
crates/___private/validator-derive/: Cargo.toml
crates/___private/validator-derive/src/: derived_fields.rs  derived_struct.rs  lib.rs  struct_field.rs
crates/actix/: Cargo.toml
crates/adapter/actix/: Cargo.toml
crates/adapter/axum/: Cargo.toml
crates/adapter/axum/examples/: simple-auth.rs
crates/adapter/axum/src/: lib.rs
crates/adapter/poem/: Cargo.toml
crates/axum/: Cargo.toml
crates/axum/examples/: extension.rs
crates/axum/src/: lib.rs
crates/claimmap/: Cargo.toml  README.md
crates/claimmap-macro/: Cargo.toml  README.md
crates/codora/: Cargo.toml
crates/codora-axum/: Cargo.toml
crates/codora-bot/: Cargo.toml
crates/codora-security/: Cargo.toml
crates/codora-security/src/: lib.rs  state.rs
crates/codora-security/src/adapter/: mod.rs
crates/codora-security/src/adapter/axum/: mod.rs
crates/codora-security/src/authentication/: mod.rs
crates/codora-security/src/authentication/handler/: mod.rs
crates/codora-security/src/authentication/handler/cookie/: mod.rs
crates/codora-security/src/context/: mod.rs
crates/codora-util/: Cargo.toml
crates/codora-util/src/: lib.rs
crates/codora-validator/: .gitignore  Cargo.toml  output.txt  template.md
crates/codora-validator/examples/: expand.rs
crates/codora-validator/src/: error.rs  lib.rs
crates/codora-validator/src/internal/: mod.rs
crates/codora/examples/: simple-auth.rs
crates/codora/src/: lib.rs  main.rs
crates/handler/src/: lib.rs
crates/iam/: Cargo.toml
crates/mysql/: Cargo.toml
crates/postgres/: Cargo.toml
crates/thestack-derive/: Cargo.toml
crates/thestack-validator/: Cargo.toml
crates/thestack-validator/src/: context.rs  lib.rs
crates/web/security/: Cargo.toml
crates/web/security/src/: lib.rs
crates/web/security/src/authentication/: mod.rs
crates/web/security/src/authentication/handler/: mod.rs
crates/weekend-derive/: Cargo.toml
crates/weekend/src/authentication/: mod.rs
crates/weekend/src/authentication/builder/: mod.rs
crates/~-bot/: Cargo.toml
crates/~-extension/: Cargo.toml
crates/~-extension/src/: lib.rs
crates/~-web/: Cargo.toml
crates/~-web/crates/security/: Cargo.toml
crates/~-web/crates/security/src/: lib.rs
crates/~-web/crates/security/src/authentication/: claim.rs  mod.rs
crates/~-web/crates/security/src/authentication/handler/cookie/: mod.rs
docs/: README.md  docusaurus.config.ts
docs/docs/: installation.md
docs/src/pages/: index.module.css  index.tsx
examples/: README.md  policy.rs  std.rs
identity/: Cargo.toml
modules/: README.md
security/: Cargo.toml  lib.rs
security/authentication/: handler.rs  mod.rs  state.rs
security/cookie/: Cargo.toml
security/src/: authentication.rs  lib.rs
security/src/bearer/: mod.rs
src/: bearer.rs  lib.rs  main.rs  state.rs
src/authentication/: builder.rs  mod.rs
src/bearer/: mod.rs
src/context/: mod.rs
src/provider/: mod.rs
www/: README.md
