[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/getcodora/codora"
keywords = ["web", "server", "orm", "authentication", "security", "logging"]
categories = ["web-programming", "web-framework", "orm"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[workspace.dependencies]
# Workspace Crates
codora-security = { path = "./crates/~-security" }
extension = { path = "./crates/~-extension" }
codora = { path = "./crates/codora" }

# External Crates
anyhow = "1.0.87"
serde = "1.0.215"
serde_json = "1.0.140"
tokio = { version = "1.44.0" }

[workspace.lints.clippy]

# TODO
# Setup Compiler Profile
