[workspace]
members = ["crates/~-web/crates/*", "crates/*"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ship Rust application faster than you could ever"
readme = "README.md"
homepage = "https://github.com/getcodora/codora"
documentation = "https://docs.rs/codora"
repository = "https://github.com/getcodora/codora"
keywords = ["web", "server", "orm", "authentication", "security", "logging"]
categories = ["web-programming", "database", "authentication"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[workspace.dependencies]
# Workspace Crates
codora = { path = "./crates/codora", version = "0.1.0" }
codora-web = { path = "./crates/~-web", version = "0.1.0" }
extension = { path = "./crates/~-extension", version = "0.1.0" }
codora-security = { path = "./crates/~-web/crates/security", version = "0.1.0" }

# External Crates
anyhow = "1.0.87"
serde = "1.0.215"
serde_json = "1.0.140"
tokio = { version = "1.44.0" }

[workspace.lints.clippy]

# TODO
# Setup Compiler Profile
