[package]
name = "codora"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ship Rust application faster than you could ever"
readme = "README.md"
homepage = "https://github.com/getcodora/codora"
documentation = "https://docs.rs/codora"
repository = "https://github.com/getcodora/codora"
keywords = ["web", "server", "orm", "authentication", "security"]
categories = ["web-programming", "database", "authentication"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[dependencies]
