[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
std-plus.workspace = true

# [dependencies]
# async-trait = "0.1.83"
# axum-core = { version = "0.4.3", optional = true }
# derive-new = "0.7.0"
# http = "1.1.0"
# tower-layer = "0.3.3"
# tower-service = "0.3.3"

# # Extenstion

# axum-plus = {git = "https://github.com/0x28west-dev/axum-plus", rev = "9247c31a9f487453d91dcf8146af03346a51c095" }


# [dev-dependencies]

# bytes = "1.7.1"
# futures-util = "0.3.30"
# http-body = "1.0.1"
# http-body-util = "0.1.2"
# tokio = { version = "1.40.0", features = ["full"] }
# tower = { version = "0.5.0", features = ["full"] }
