[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
std-plus = { workspace = true }

[features]
default = ["serde"]
serde = ["dep:serde"]

[dev-dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json = "1.0.133"
