[package]
name = "wknd-axum"
version = "0.1.0"
edition = "2021"


[lints]
workspace = true

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
plus-rs = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-routing"] }

[dev-dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
