[package]
name = "claimmap"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/theProject-org/claims"
keywords = ["authentication", "claim", "claims", "claims"]
categories = ["authentication", "authorization"]
authors = ["West Sheriff <west.sh.mail@gmail.com>"]

[features]
serde = ["dep:serde", "serde/derive"]

[dependencies]
serde = { version = "1.0.215", optional = true }
plus-rs = { git = "https://github.com/ws-gith/plus.git", rev = "462ad8feabc57a4cfeded89c7544ee8b4eaee858", features = [
    "std-rs",
] }
derive-new = "0.7.0"


[dev-dependencies]
anyhow = "1.0.87"
# TODO -> add linting, docs path, and compiler profile
