[package]
name = "codora-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]
default = ["axum"]
axum = ["dep:axum"]
poem = []
actix = []
identity = []

[dependencies]
axum = { workspace = true, optional = true }

[lints]
workspace = true
