[package]
name = "codora-validator"
edition = { workspace = true }
version = { workspace = true }


[features]
default = ["derive"]
derive = ["dep:validator-derive"]

[dependencies]
codora-util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
validator-derive = { path = "../___private/validator-derive", optional = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
