[package]
name = "codora-validator"
edition = { workspace = true }
version = { workspace = true }


[features]
default = ["derive", "serde"]
derive = ["dep:validator-derive"]
serde = ["dep:serde"]

[dependencies]
codora-util = { workspace = true }
serde_json = { workspace = true }
derive_more = { version = "2.0.1", features = ["from"] }
serde = { workspace = true, features = ["derive"], optional = true }
validator-derive = { path = "../___private/validator-derive", optional = true }


[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
