[package]
name = "codora"
version = { workspace = true }
edition = { workspace = true }


[features]
default = ["extension", "security"]
security = ["dep:codora-security"]
extension = ["dep:extension"]

[dependencies]
extension = { workspace = true, optional = true }
codora-security = { workspace = true, optional = true }


[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
