[package]
name = "codora"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
keywords = ["rust"]
categories = ["rust", "web"]
authors = { workspace = true }


[features]
default = ["extension", "web"]
extension = ["dep:extension"]
web = ["dep:codora-web"]


[dependencies]
extension = { workspace = true, optional = true }
codora-web = { workspace = true, optional = true }


[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
