[package]
name = "codora-bot"
description = "Library for bot development with codora"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = { workspace = true }
keywords = ["bot", "tlib", "telegram-library", "discord-library"]
categories = ["web-programming"]
authors = { workspace = true }

[dependencies]
derive-new = "0.7.0"

[lints]
workspace = true
