[package]
name = "extension"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
publish = false

[dependencies]
derive-new = { version = "0.7.0" }

[lints]
workspace = true
