[package]
name = "extension"
version = "0.1.0"
description = "Helpful abstraction and utilities built to speed up development in rust"
edition = "2024"
license = "MIT"
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
authors = { workspace = true }
publish = false

[dependencies]
derive-new = { version = "0.7.0" }

[lints]
workspace = true
