[package]
name = "codora-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]

[dependencies]
# Local crates
codora-security = { path = "./crates/security" }
futures-util = "0.3.31"
http = "1.3.1"
extension = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
