[package]
name = "codora-web"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Web development in codora"
repository = { workspace = true }
keywords = ["web", "security"]
categories = ["web", "security"]
authors = { workspace = true }


[features]

[dependencies]
# Local crates
codora-security = { workspace = true }
futures-util = "0.3.31"
http = "1.3.1"
extension = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
