[package]
name = "validator-derive"
version = "0.1.0"
edition = "2024"
authors = ["wests"]
description = "Derive macro for validator"
license = "MIT"
# readme = "../codora-validator/README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.11"
proc-macro-error2 = "2.0.1"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.100"
