[package]
name = "codora-adapter-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
codora-util = { workspace = true }
codora-security = { workspace = true }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

[lints]
workspace = true
