[package]
name = "codora-security"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[features]

[dependencies]
futures-util = "0.3.31"
http = "1.3.1"
<<<<<<<< HEAD:crates/~-security/Cargo.toml
extension = { workspace = true }
========
codora-core = { workspace = true }
>>>>>>>> acef29043e69271790186913c6c5b030dada6bf0:crates/web/security/Cargo.toml

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
